Edited index.html the path was not correct

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <body>
         <h1> Odin Recipes</h1>
         <p> Welcome </p>
-        <a href="./tacos.html"> tacos recipe</a>
+        <a href="recipes/tacos.html"> tacos recipe</a>
     </body>
 </html>
