--- a/recipes/tacos.html
+++ b/recipes/tacos.html
@@ -10,6 +10,21 @@
         <h1>Tacos</h1>
         <img src="../images/tacos.jpg" alt="two tacos on a plate with toppings of onion, cilantro, cheese,limon, and guacamole">
         <p>Carne asada tacos are delicious flank steak. All you need is a few ingredients and you are ready to go.</p>
-
+        <h3> Ingredients</h3>
+        <p><ul>
+            <li>Carne asada</li>
+            <li>2 Avocado</li>
+            <li>1/3 Cup onion, finely diced</li>
+            <li>Fresh Limes</li>
+            <li>1/2 cup Cilantro, chopped</li>
+            <li>3 tbsp Cojita Cheese</li>
+            <li>6 Tortillas</li>
+        </ul></p>
+        <h3>Steps</h3>
+        <p><ol>
+            <li>Grill the carne asada until it's cooked to your preference. Slice it against the grain, then chop it into small peices.</li>
+            <li>Use a spoon to mash the avocado and spread a large spoonful or two onto each tortilla. Once the asada is added, sprinkle on some cojita cheese, diced onion, and fresh cilantro</li>
+            <li>Add lime.</li>
+        </ol></p>
     </body>
 </html>
