add photo of blueberry dutch baby

--- a/recipes/blueberry-dutch-baby.html
+++ b/recipes/blueberry-dutch-baby.html
@@ -8,8 +8,8 @@
     
     <body>
         <h1>Blueberry Dutch Baby Recipe</h1>
-        <img src="/images/blueberry-dutch-baby.jpg">
-        
+        <img src="/images/blueberry-dutch-baby.jpeg">
+
     </body>
 
 </html>
