--- a/recipes/blueberry-dutch-baby.html
+++ b/recipes/blueberry-dutch-baby.html
@@ -8,7 +8,7 @@
     
     <body>
         <h1>Blueberry Dutch Baby Recipe</h1>
-        <img src="/images/blueberry-dutch-baby.jpeg">
+        <img src="">
 
     </body>
 
