add ingredient list and steps to make

--- a/recipes/blueberry-dutch-baby.html
+++ b/recipes/blueberry-dutch-baby.html
@@ -8,7 +8,25 @@
     
     <body>
         <h1>Blueberry Dutch Baby Recipe</h1>
-        <img src="">
+        <img src="../images/NotLikeThis.png" alt="psyduck with his hands on his head at a christmas themed table">
+        <p>Blueberry baked pancake that will knock your socks off</p>
+        <p><h3>Ingredients</h3></p>
+        <p><ul>
+            <li>all purpose flour</li>
+            <li>fine salt</li>
+            <li>vanilla extract</li>
+            <li>large eggs at room temp</li>
+            <li>milk at room temp</li>
+            <li>clarified butter, melted</li>
+            <li>lemon juice</li>
+            <li>powedered sugar</li>
+            <li>maple syrup</li>
+        </ul></p>
+        <p><h3>Steps</h3></p>
+        <p><ol>
+            <li>preheat oven</li>
+            <li>it's baked and ready to eat</li>
+        </ol></p>
 
     </body>
 
