--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <ul>
         <li><a href="recipes/tacos.html"> tacos recipe</a></li>
         <li><a href="recipes/blueberry-dutch-baby.html"> Blueberry Dutch Baby recipe</a></li>
+        <li><a href="recipes/whiskey-chicken.html"> Whiskey Chicken Recipe</a>
         </ul>
     </body>
 </html>
