add ingredients and steps to make

--- a/recipes/whiskey-chicken.html
+++ b/recipes/whiskey-chicken.html
@@ -8,5 +8,24 @@
     <body>
         <h1>Whiskey Chicken</h1>
         <img src="../images/POGGIES.png" alt="excited young from with christmas hat on">
+        <p>Fan favorite during sporting events. You can even have this food on a stick POGGIES.</p>
+        
+        <p><h3>Ingredients</h3></p>
+        <p><ul>
+            <li>skinless, bonless chicken</li>
+            <li>soy sauce</li>
+            <li>garlic powder</li>
+            <li>pineapple juice</li>
+            <li>your strongest bourbon</li>
+            <li>ground black pepper</li>
+            <li>brown sugar</li>
+        </ul></p>
+        
+        <p><h3>Steps</h3></p>
+        <p><ol>
+            <li>Saute chicken</li>
+            <li>Add sauces</li>
+            <li>Add done. <strong>Enjoy!</strong></li>
+        </ol></p>
     </body>
 </html>
