add hacker gif to index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <body>
         <h1> Odin Recipes</h1>
         <p> Welcome </p>
+        <img src="./images/hacker.gif">
         <ul>
         <li><a href="recipes/tacos.html"> tacos recipe</a></li>
         <li><a href="recipes/blueberry-dutch-baby.html"> Blueberry Dutch Baby recipe</a></li>
